crates/wh-iron-codegen/tests/snapshots/msl_snapshots__bf16_param_only_native_emits_native_type.snap
---
source: crates/wh-iron-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by Iron Kernels
#include <metal_stdlib>
using namespace metal;

kernel void bf16_param(
    [[maybe_unused]] const device bfloat *a [[buffer(0)]],
    uint tid [[thread_position_in_grid]]
) {
}
