crates/wh-iron-codegen/tests/snapshots/msl_snapshots__cast_chain_bf16_compat.snap
---
source: crates/wh-iron-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by Iron
#include <metal_stdlib>
using namespace metal;

// BF16 compatibility struct for pre-Metal-3.1 targets
struct bfloat16_t {
    uint16_t bits;
    bfloat16_t() = default;
    bfloat16_t(float v) {
        uint32_t x = as_type<uint32_t>(v);
        bits = uint16_t((x + 0x7FFFu + ((x >> 16) & 1u)) >> 16);
    }
    operator float() const {
        return as_type<float>(uint32_t(bits) << 16);
    }
    operator float() const device {
        return as_type<float>(uint32_t(bits) << 16);
    }
    operator float() const threadgroup {
        return as_type<float>(uint32_t(bits) << 16);
    }
};

kernel void cast_chain(
    const device float *x [[buffer(0)]],
    device float *out [[buffer(1)]],
    uint tid [[thread_position_in_grid]]
) {
    uint v0 = tid;
    auto v1 = x[v0];
    auto v4 = static_cast<float>(bfloat16_t(static_cast<half>(v1)));
    out[v0] = v4;
}
