crates/wh-iron-codegen/tests/snapshots/msl_snapshots__reduction_sum_snapshot_small_tpg.snap
---
source: crates/wh-iron-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by Iron
#include <metal_stdlib>
using namespace metal;

kernel void reduction_smoke(
    const device float *x [[buffer(0)]],
    device float *out [[buffer(1)]],
    uint3 _tgid3 [[threadgroup_position_in_grid]]
) {
    uint tgid_x = _tgid3.x;
    uint v0 = tgid_x;
    auto v1 = x[v0];
    float v2 = simd_sum(float(v1));
    out[v0] = v2;
}
