crates/wh-iron-codegen/tests/snapshots/msl_snapshots__vadd_bf16_compat_preamble.snap
---
source: crates/wh-iron-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by Iron
#include <metal_stdlib>
using namespace metal;

// BF16 compatibility struct for pre-Metal-3.1 targets
struct bfloat16_t {
    uint16_t bits;
    bfloat16_t() = default;
    bfloat16_t(float v) {
        uint32_t x = as_type<uint32_t>(v);
        bits = uint16_t((x + 0x7FFFu + ((x >> 16) & 1u)) >> 16);
    }
    operator float() const {
        return as_type<float>(uint32_t(bits) << 16);
    }
    operator float() const device {
        return as_type<float>(uint32_t(bits) << 16);
    }
    operator float() const threadgroup {
        return as_type<float>(uint32_t(bits) << 16);
    }
};

kernel void vector_add(
    const device bfloat16_t *a [[buffer(0)]],
    const device bfloat16_t *b [[buffer(1)]],
    device bfloat16_t *c [[buffer(2)]],
    uint tid [[thread_position_in_grid]]
) {
    uint v_idx = tid;
    auto v_x = a[v_idx];
    auto v_y = b[v_idx];
    auto v_sum = v_x + v_y;
    c[v_idx] = v_sum;
}
