crates/wh-iron-codegen/tests/snapshots/msl_snapshots__vadd_bf16_native.snap
---
source: crates/wh-iron-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by Iron
#include <metal_stdlib>
using namespace metal;

kernel void vector_add(
    const device bfloat *a [[buffer(0)]],
    const device bfloat *b [[buffer(1)]],
    device bfloat *c [[buffer(2)]],
    uint tid [[thread_position_in_grid]]
) {
    uint v_idx = tid;
    float v_x = float(a[v_idx]);
    float v_y = float(b[v_idx]);
    auto v_sum = v_x + v_y;
    c[v_idx] = bfloat(v_sum);
}
