crates/wh-iron-codegen/tests/snapshots/msl_snapshots__vadd_f16_default_config.snap
---
source: crates/wh-iron-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by Iron Kernels
#include <metal_stdlib>
using namespace metal;

kernel void vector_add(
    const device half *a [[buffer(0)]],
    const device half *b [[buffer(1)]],
    device half *c [[buffer(2)]],
    uint tid [[thread_position_in_grid]]
) {
    uint v_idx = tid;
    auto v_x = a[v_idx];
    auto v_y = b[v_idx];
    auto v_sum = v_x + v_y;
    c[v_idx] = v_sum;
}
